# FRCEstimator

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/analysis/: trajectory_metrics.cpp  trajectory_metrics.h
src/app/: main.cpp
src/common/: track.h
src/ekf/: ekf_localization.cpp  ekf_localization.h
src/odometry/: landmark_odometry_solver.cpp  landmark_odometry_solver.h  swerve_kinematics.cpp  swerve_kinematics.h
src/pipeline/: synthetic_pipeline.cpp  synthetic_pipeline.h
src/plotting/: octave_plotter.cpp  octave_plotter.h  plot_trajectories.m  plot_trajectories_with_raw.m  plot_yaw_headings.m
src/simulation/: synthetic_data.cpp  synthetic_data.h
